# kyrax-engine

./: .gitignore  IMPROVEMENTS_SUMMARY.md  Os_automation.txt  PROJECT_OVERVIEW.md  README.md  commit_msg.txt  commit_msg2.txt  info.md  kyrax_workflows.db  not_used.txt  out.txt  pyproject.toml  requirements.txt  test_imports.py  test_volume_live.py  test_volume_pipeline.py  testr.py
archive/: README.md  demo_planner_pipeline.py  intent_handler.py  planner.py  planner_pipeline.py  run_pipeline9.py  text_adapter.py
data/: contacts.json
examples/: adapter_demo.py  demo_context_flow.py  demo_guardrails.py  demo_planner.py  demo_reasoner.py  demo_skill_chaining.py  demo_workflow_manager.py  nlu_demo.py  run_dispatcher.py  run_pipeline.py  run_pipeline2.py  test_command.py  test_command_builder.py  test_context_logger_simple.py  test_skills.py  test_whatsapp_send.py
kyrax_core/: ai_reasoner.py  ai_reasoner9.py  audit.py  chain_executor.py  command.py  command_builder.py  config.py  contact_resolver.py  contact_store.py  context_logger.py  dispatcher.py  guards.py  guards2.py  intent_mapper.py  llm_adapters.py  os_policy.py  planner.py  planner_pipeline.py  policy_store.py  ratelimiter_redis.py  skill_base.py  skill_registry.py  workflow_manager.py
skills/: iot_skill.py  os_backends.py  os_skill.py  os_skill2.py  whatsapp_skill.py  whatsapp_skill9.py
test/: audio.m4a  test.py
tests/: test_command_builder_os.py  test_guards_os.py  test_guards_roles.py  test_os_backends_and_skill.py  test_os_skill.py  test_whatsapp_skill_contract.py
tools/: policy_reload.py
(+10 files in other folders)
