[project]
name = "kyrax-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "openai>=2.16.0",
    "openai-whisper>=20250625",
    "pip>=25.3",
    "pydantic>=2.12.5",
    "selenium>=4.40.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "spacy>=3.8.11",
    "uvicorn>=0.40.0",
    "webdriver-manager>=4.0.2",
]
