[project]
name = "kyrax-engine"
version = "0.1.0"
description = "AI-first system for reasoning, planning, and executing complex tasks"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "comtypes>=1.4.15",
    "fastapi>=0.128.0",
    "google-genai>=1.0.0",
    "openai>=2.16.0",
    "openai-whisper>=20250625",
    "playwright>=1.40.0",
    "pycaw>=20251023",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "selenium>=4.40.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "spacy>=3.8.0",
    "uvicorn>=0.40.0",
    "webdriver-manager>=4.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
